add folder video, add  audio sing artist

--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
     <p>Спроба №8</p>
     <p>Після сьомої спроби є великий шанс зробити все як треба :)</p>
     <p>Вже щось починаю кумекати</p>
+    <h3>Start</h3>
+    <p>Вибір виконавця</p>
+    <select name="name">
+        <option value=""> Molfar</option>
+        <option value=""> Okean_el_zi</option>
+        <option value="" Selected>Skofka</option>
+        <option value=""> Tayanna</option>
+    </select>
+    <br>
 </body>
 </html>
