--- a/index.html
+++ b/index.html
@@ -18,5 +18,23 @@
         <option value=""> Tayanna</option>
     </select>
     <br>
+    <audio controls="controls">
+        <source src="audio/molfar_-_alhimiya_muzati.net.mp3">
+    </audio>
+    <br>
+    <audio controls autoplay>
+        <source src="audio/okean_el_zi_-_kviti_minnih_zon_muzati.net.mp3">
+    </audio>
+    <br>
+    <audio controls="controls">
+        <source src="audio/skofka_-_chuti_gimn_muzati.net.mp3">
+    </audio>
+    <br>
+    <audio controls="controls">
+        <source src="audio/tayanna_-_gori_muzati.net.mp3">
+    </audio>
+    <br>
+        <video controls src="video/716024130.mp4" width="600" autoplay></video>
+    <br>
 </body>
 </html>
