--- a/index.html
+++ b/index.html
@@ -39,5 +39,10 @@
     <p title="Документ підтверджуючий авторські права">Ліцензія</p>
     <iframe src="media/matematika_2_klas_no3_1649253844.pdf" width="300">Ліцензія</iframe>
     <br>
+    <p>wikipedia</p>
+        <iframe src="https://ru.wikipedia.org/wiki/%D0%9E%D0%B1%D1%8A%D0%B5%D0%BA%D1%82%D0%BD%D0%BE-%D0%BE%D1%80%D0%B8%D0%B5%D0%BD%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%BE%D0%B5_%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5" width="600" height="700"></iframe>
+    <br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/KpHtCGJD_T0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <br>
 </body>
 </html>
