--- a/index.html
+++ b/index.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Document</title>
-</head>
-<body>
-    <h1>Lesson 3 Git</h1>
-    <h2>GitHub</h2>
-    <p>Спроба №8</p>
-    <p>Після сьомої спроби є великий шанс зробити все як треба :)</p>
-    <p>Вже щось починаю кумекати</p>
-    <h3>Start</h3>
-    <p>Вибір виконавця</p>
-    <select name="name">
-        <option value=""> Molfar</option>
-        <option value=""> Okean_el_zi</option>
-        <option value="" Selected>Skofka</option>
-        <option value=""> Tayanna</option>
-    </select>
-    <br>
-    <audio controls="controls">
-        <source src="audio/molfar_-_alhimiya_muzati.net.mp3">
-    </audio>
-    <br>
-    <audio controls autoplay>
-        <source src="audio/okean_el_zi_-_kviti_minnih_zon_muzati.net.mp3">
-    </audio>
-    <br>
-    <audio controls="controls">
-        <source src="audio/skofka_-_chuti_gimn_muzati.net.mp3">
-    </audio>
-    <br>
-    <audio controls="controls">
-        <source src="audio/tayanna_-_gori_muzati.net.mp3">
-    </audio>
-    <br>
-        <video controls src="video/716024130.mp4" width="600" autoplay></video>
-    <br>
-    <p title="Документ підтверджуючий авторські права">Ліцензія</p>
-    <iframe src="media/matematika_2_klas_no3_1649253844.pdf" width="300">Ліцензія</iframe>
-    <br>
-    <p>wikipedia</p>
-        <iframe src="https://ru.wikipedia.org/wiki/%D0%9E%D0%B1%D1%8A%D0%B5%D0%BA%D1%82%D0%BD%D0%BE-%D0%BE%D1%80%D0%B8%D0%B5%D0%BD%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%BE%D0%B5_%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5" width="600" height="700"></iframe>
-    <br>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/KpHtCGJD_T0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <br>
-</body>
+    <head>
+        <title>Document</title>
+    </head>
+    <body>
+        <h1>Lesson 3 Git</h1>
+        <h2>GitHub</h2>
+        <p>Спроба №8</p>
+        <p>Після сьомої спроби є великий шанс зробити все як треба :)</p>
+        <p>Вже щось починаю кумекати</p>
+        <h3>Start</h3>
+        <p>Вибір виконавця</p>
+        <select name="name">
+            <option value=""> Molfar</option>
+            <option value=""> Okean_el_zi</option>
+            <option value="" Selected>Skofka</option>
+            <option value=""> Tayanna</option>
+        </select>
+        <br>
+        <audio controls="controls">
+            <source src="audio/molfar_-_alhimiya_muzati.net.mp3">
+        </audio>
+        <br>
+        <audio controls autoplay>
+            <source src="audio/okean_el_zi_-_kviti_minnih_zon_muzati.net.mp3">
+        </audio>
+        <br>
+        <audio controls="controls">
+            <source src="audio/skofka_-_chuti_gimn_muzati.net.mp3">
+        </audio>
+        <br>
+        <audio controls="controls">
+            <source src="audio/tayanna_-_gori_muzati.net.mp3">
+        </audio>
+        <br>
+            <video controls src="video/716024130.mp4" width="600" autoplay></video>
+        <br>
+        <p title="Документ підтверджуючий авторські права">Ліцензія</p>
+        <iframe src="media/matematika_2_klas_no3_1649253844.pdf" width="300">Ліцензія</iframe>
+        <br>
+        <p>wikipedia</p>
+            <iframe src="https://ru.wikipedia.org/wiki/%D0%9E%D0%B1%D1%8A%D0%B5%D0%BA%D1%82%D0%BD%D0%BE-%D0%BE%D1%80%D0%B8%D0%B5%D0%BD%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%BE%D0%B5_%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5" width="600" height="700"></iframe>
+        <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/KpHtCGJD_T0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br>
+        <img src="imag/Єнот2.jpg" alt="Шалений єнот" width="400" height="400" title="я коли роблю домашку">
+        <img src="imag/Єнот.jpg" alt="Єнот" width="400" height="400" title="Привіт, все ОК">
+        <img src="imag/Кінкажу.jpg" alt="Кінкажу" width="300" height="400" title="Ось такий я Кінкажу">
+        <br>
+    </body>
 </html>
