button on file gallery

--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
         <img src="imag/Єнот.jpg" alt="Єнот" width="400" height="400" title="Привіт, все ОК">
         <img src="imag/Кінкажу.jpg" alt="Кінкажу" width="300" height="400" title="Ось такий я Кінкажу">
         <br>
+        <a href="imag/gallery.html">Перейти в галерею</a>
     </body>
 </html>
